; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_pnfs_dev.c_nfs4_insert_deviceid_node.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_pnfs_dev.c_nfs4_insert_deviceid_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_deviceid_node = type { i32, i32, i32, i32, i32 }

@nfs4_deviceid_lock = common dso_local global i32 0, align 4
@nfs4_deviceid_cache = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nfs4_deviceid_node* @nfs4_insert_deviceid_node(%struct.nfs4_deviceid_node* %0) #0 {
  %2 = alloca %struct.nfs4_deviceid_node*, align 8
  %3 = alloca %struct.nfs4_deviceid_node*, align 8
  %4 = alloca %struct.nfs4_deviceid_node*, align 8
  %5 = alloca i64, align 8
  store %struct.nfs4_deviceid_node* %0, %struct.nfs4_deviceid_node** %3, align 8
  %6 = call i32 @spin_lock(i32* @nfs4_deviceid_lock)
  %7 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  %8 = getelementptr inbounds %struct.nfs4_deviceid_node, %struct.nfs4_deviceid_node* %7, i32 0, i32 2
  %9 = call i64 @nfs4_deviceid_hash(i32* %8)
  store i64 %9, i64* %5, align 8
  %10 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  %11 = getelementptr inbounds %struct.nfs4_deviceid_node, %struct.nfs4_deviceid_node* %10, i32 0, i32 4
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  %14 = getelementptr inbounds %struct.nfs4_deviceid_node, %struct.nfs4_deviceid_node* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  %17 = getelementptr inbounds %struct.nfs4_deviceid_node, %struct.nfs4_deviceid_node* %16, i32 0, i32 2
  %18 = load i64, i64* %5, align 8
  %19 = call %struct.nfs4_deviceid_node* @_find_get_deviceid(i32 %12, i32 %15, i32* %17, i64 %18)
  store %struct.nfs4_deviceid_node* %19, %struct.nfs4_deviceid_node** %4, align 8
  %20 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %4, align 8
  %21 = icmp ne %struct.nfs4_deviceid_node* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %1
  %23 = call i32 @spin_unlock(i32* @nfs4_deviceid_lock)
  %24 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %4, align 8
  store %struct.nfs4_deviceid_node* %24, %struct.nfs4_deviceid_node** %2, align 8
  br label %37

25:                                               ; preds = %1
  %26 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  %27 = getelementptr inbounds %struct.nfs4_deviceid_node, %struct.nfs4_deviceid_node* %26, i32 0, i32 1
  %28 = load i32*, i32** @nfs4_deviceid_cache, align 8
  %29 = load i64, i64* %5, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = call i32 @hlist_add_head_rcu(i32* %27, i32* %30)
  %32 = call i32 @spin_unlock(i32* @nfs4_deviceid_lock)
  %33 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  %34 = getelementptr inbounds %struct.nfs4_deviceid_node, %struct.nfs4_deviceid_node* %33, i32 0, i32 0
  %35 = call i32 @atomic_inc(i32* %34)
  %36 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %3, align 8
  store %struct.nfs4_deviceid_node* %36, %struct.nfs4_deviceid_node** %2, align 8
  br label %37

37:                                               ; preds = %25, %22
  %38 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %2, align 8
  ret %struct.nfs4_deviceid_node* %38
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @nfs4_deviceid_hash(i32*) #1

declare dso_local %struct.nfs4_deviceid_node* @_find_get_deviceid(i32, i32, i32*, i64) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @hlist_add_head_rcu(i32*, i32*) #1

declare dso_local i32 @atomic_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
